# vk-module

./: .clang-format  .gitignore  CMakeLists.txt  README.md  codegen_text.py  generate.py
cmake/: CXXModules.cmake
cpp17/: CMakeLists.txt  vk_module.h  vk_module_interop.h  vkm.h  vkm_c_interop.h  vkm_core.h  vkm_function.cpp  vkm_function.h  vkm_string.cpp  vkm_string.h
cpp20/: CMakeLists.txt  vk_module.h  vk_module_interop.h  vkm_c_defs.h  vkm_core.h  vkm_function.cpp  vkm_function.h  vkm_string.cpp  vkm_string.h
include/: vk-binding.h  vkpp.h  vkpp_core.h  vkpp_functions.h  vkpp_string.cpp  vkpp_string.h
include/vulkan/: vulkan.cpp  vulkan.h  vulkan_string.cpp  vulkan_string.h
misc/: ENUMS AND BITMASKS AND FLAGS, OH MY.xml  discussion.md
module/: vk_module.h  vk_module_interop.h  vulkan_module.ixx
sample/: CMakeLists.txt  basic.cpp  module_triangle.cpp  simple_triangle.cpp  test_vkhpp.cpp  triangle.cpp
test/: CMakeLists.txt
test/fancy-api/: CMakeLists.txt  flags_test.cpp  functions_test.cpp  main.cpp  static_asserts.h
test/simple-api/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  flags_test.cpp  functions_test.cpp  main.cpp  static_asserts.h  static_test.cpp
vulkan/: vulkan.h
